--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Encabezado -->
   <header>
     <div class="logo">
-      <img src="img/logo.png" alt="Logo">
+      <img src="assets/logo.png" alt="Logo">
     </div>
     <nav class="menu">
       <ul>
@@ -57,3 +57,4 @@
   </footer>
 </body>
 </html>
+
