--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
   <h2>NEW WORKS</h2>
   <div class="works-gallery">
     <div class="work-item">
-      <img src="img/works/class.png" alt="Chainsaw Man">
+      <img src="assets/works/class.png" alt="Chainsaw Man">
     </div>
     <div class="work-item">
-      <img src="img/works/shadow.png" alt="Yumekinga Paradise">
+      <img src="assets/works/shadow.png" alt="Yumekinga Paradise">
     </div>
     <div class="work-item">
-      <img src="img/works/solo.png" alt="Isekai">
+      <img src="assets/works/solo.png" alt="Isekai">
     </div>
     <div class="work-item">
-      <img src="img/works/juju.png" alt="Dorohedoro">
+      <img src="assets/works/juju.png" alt="Dorohedoro">
     </div>
     <div class="work-item">
-      <img src="img/works/rezero.png" alt="Jigokuraku">
+      <img src="assets/works/rezero.png" alt="Jigokuraku">
     </div>
   </div>
 </section>
@@ -57,4 +57,5 @@
   </footer>
 </body>
 </html>
+
 
