--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </section>
 <footer class="footer" id="contacto">
     <div class="container">
-      <p>© <span id="year"></span> Plenix Studio 2025</p>
+      <p>© <span id="year"></span> Plenix Studio 2025 Jhon Wick</p>
     </div>
   </footer>
 </body>
